--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
 
   <footer>
     <p>© 2025 Encanto das Flores. Todos os direitos reservados.</p>
+    <p> Desenvolvido por Thiago S.B do 1° Info da ETEC do Heliópolis</p>
+
   </footer>
 
 </body>
 </html>
+
