--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
     <p>📍 Rua das Flores, 123 - São Paulo</p>
     <p>📞 (11) 91234-5678 | WhatsApp: (11) 91234-5678</p>
     <p>🌐 Siga-nos nas redes sociais:  
-      <a href="#">Instagram</a> | <a href="#">Facebook</a> | <a href="#">WhatsApp</a>
+      <a href="https://www.instagram.com/itsbrsetemeia/">Instagram</a> 
+      <a href="https://www.facebook.com/profile.php?id=100083594738695">Facebook</a> 
+      <a href="15511978558999">WhatsApp</a>
     </p>
   </section>
 
@@ -99,5 +101,6 @@
 
 </body>
 </html>
+
 
 
